<?php

namespace App\Models;

use Database\Factories\UserFactory;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Relations\BelongsTo;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;
use Modules\Training\Models\Department;

class User extends Authenticatable
{
    /** @use HasFactory<UserFactory> */
    use HasFactory, Notifiable;

    public const ROLE_LEADERSHIP = 'leadership';
    public const ROLE_TRAINING_OFFICE = 'training_office';
    public const ROLE_DEPARTMENT_STAFF = 'department_staff';
    public const ROLE_TEACHER = 'teacher';
    public const ROLE_STUDENT = 'student';
    public const ROLE_ADMIN = 'admin';

    public const STATUS_PENDING = 'pending';
    public const STATUS_APPROVED = 'approved';
    public const STATUS_REJECTED = 'rejected';

    protected $attributes = [
        'role' => self::ROLE_STUDENT,
        'status' => self::STATUS_PENDING,
    ];

    public static array $availableRoles = [
        self::ROLE_LEADERSHIP,
        self::ROLE_TRAINING_OFFICE,
        self::ROLE_DEPARTMENT_STAFF,
        self::ROLE_TEACHER,
        self::ROLE_STUDENT,
        self::ROLE_ADMIN,
    ];

    public static array $availableStatuses = [
        self::STATUS_PENDING,
        self::STATUS_APPROVED,
        self::STATUS_REJECTED,
    ];

    protected $fillable = [
        'name',
        'email',
        'password',
        'role',
        'status',
        'department_id',
        'employee_code',
        'phone',
    ];

    protected $hidden = [
        'password',
        'remember_token',
    ];

    protected $casts = [
        'email_verified_at' => 'datetime',
        'password' => 'hashed',
    ];

    public static function getAvailableRoles(): array
    {
        return self::$availableRoles;
    }

    public static function getAvailableStatuses(): array
    {
        return self::$availableStatuses;
    }

    public function department(): BelongsTo
    {
        return $this->belongsTo(Department::class);
    }

    public function isRole(string $role): bool
    {
        return $this->role === $role;
    }

    public function isLeadership(): bool
    {
        return $this->isRole(self::ROLE_LEADERSHIP);
    }

    public function isTrainingOffice(): bool
    {
        return $this->isRole(self::ROLE_TRAINING_OFFICE);
    }

    public function isDepartmentStaff(): bool
    {
        return $this->isRole(self::ROLE_DEPARTMENT_STAFF);
    }

    public function isTeacher(): bool
    {
        return $this->isRole(self::ROLE_TEACHER);
    }

    public function isStudent(): bool
    {
        return $this->isRole(self::ROLE_STUDENT);
    }

    public function isAdmin(): bool
    {
        return $this->isRole(self::ROLE_ADMIN);
    }

    public function isStatus(string $status): bool
    {
        return $this->status === $status;
    }

    public function isApproved(): bool
    {
        return $this->isStatus(self::STATUS_APPROVED);
    }

    public function isPending(): bool
    {
        return $this->isStatus(self::STATUS_PENDING);
    }

    public function isRejected(): bool
    {
        return $this->isStatus(self::STATUS_REJECTED);
    }
}
